--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,58 +1,48 @@
-annotated-types==0.6.0
-anyio==4.1.0
-asgiref==3.7.2
-astroid==3.0.2
+absl-py==2.0.0
+astunparse==1.6.3
+cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
-decorator==5.1.1
-dill==0.3.7
-distro==1.8.0
-exceptiongroup==1.2.0
-gunicorn==21.2.0
-h11==0.14.0
-httpcore==1.0.2
-httpx==0.25.2
+contourpy==1.2.0
+cycler==0.12.1
+flatbuffers==23.5.26
+fonttools==4.47.0
+gast==0.5.4
+google-auth==2.25.2
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+grpcio==1.60.0
+h5py==3.10.0
 idna==3.6
-isort==5.13.2
-mccabe==0.7.0
-openai==1.3.9
+keras==2.15.0
+kiwisolver==1.4.5
+libclang==16.0.6
+Markdown==3.5.1
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+ml-dtypes==0.2.0
+numpy==1.26.2
+oauthlib==3.2.2
+opt-einsum==3.3.0
 packaging==23.2
-platformdirs==4.1.0
-pycodestyle==2.11.1
-pydantic==2.5.2
-pydantic_core==2.14.5
-python-decouple==3.8
-pytz==2023.3.post1
+Pillow==10.1.0
+protobuf==4.23.4
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
 requests==2.31.0
-sniffio==1.3.0
-sqlparse==0.4.4
-tblib==3.0.0
-tomli==2.0.1
-tomlkit==0.12.3
-tqdm==4.66.1
-urllib3==2.1.0
-
-# Linting
-pylint==3.0.3
-pylint-django==2.5.5
-black>=23.3.0
-pylint-plugin-utils==0.8.2
-
-# development
-django-debug-toolbar>=2.2,<4.3
-psycopg2-binary>=2.8,<2.10
-
-# types
-types-pytz==2023.3.1.1
-types-PyYAML==6.0.12.12
-types-requests==2.31.0.10
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.34.0
+tensorflow-macos==2.15.0
+termcolor==2.4.0
 typing_extensions==4.9.0
-
-# django
-Django==5.0
-django-cors-headers==4.3.1
-django-rest-framework==0.1.0
-django-stubs==4.2.7
-django-stubs-ext==4.2.7
-djangorestframework==3.14.0
-djangorestframework-stubs==3.14.5
+urllib3==2.1.0
+Werkzeug==3.0.1
+wrapt==1.14.1
